# LAPS

./: .gitignore  README.md  environment.yml  pyproject.toml
models/modl/: model_1d_3_finetune.pth  model_1d_5_finetune.pth  model_1d_6_finetune.pth  model_1d_7_finetune.pth  model_1d_9_finetune.pth  model_1d_joint_finetune.pth  model_2d_10_finetune.pth  model_2d_15_finetune.pth  model_2d_20_finetune.pth  model_2d_30_finetune.pth  model_2d_5_finetune.pth  model_2d_joint_finetune.pth
scripts/: _train_sd.py  train_medvae_x4.sh  train_sd.sh
src/laps/: __init__.py  dataset.py  metrics.py  mri.py  recon_test.py  train_sd.py  utils.py
src/laps/configs/: recon.py  recon_modl.py  sd_training.py
src/laps/dataloaders/: __init__.py  concat_dataset.py  dataloader_util.py  generic_dataset.py  kspace_dataset.py  labels.py  loaders.py  paired_dataloader.py
src/laps/loggers/: __init__.py  image_logger.py  metrics_logger.py  time_logger.py  utils.py
src/laps/model/: __init__.py  conditional.py  load.py  med_vae_wrapper.py  medvae_download.py  push_tmp_sd_model.py  unconditional.py
src/laps/modl/: README.md  models.py  train.py  training_runs.md  utils.py
src/laps/recon/: __init__.py  algs.py  classic_recons.py  coils.py  lacs.py  linops.py  power.py  prox.py  reconstructor.py  utils.py
src/laps/recon/adadiff/: __init__.py  adadiff.py  train_adadiff.sh  train_adadiff_multicoil.py
src/laps/recon/nerp/: __init__.py  nerp.py  networks.py
src/laps/slam/: __init__.py  slam.py
submodules/laps-medvae/: .env  pyproject.toml
submodules/laps-medvae/medvae/: medvae_finetune.py
(+42 files in other folders)
