[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "laps"
version = "0.1.0"
authors = [
    {name = "Zachary Shah and Yonatan Urman"},
]
description = "Accelerating MRI with Longitudinally-informed Latent Posterior Sampling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
